--- a/api-docs.yml
+++ b/api-docs.yml
@@ -652,6 +652,8 @@ definitions:
         type: string
       limit:
         type: string
+      git_branch:
+        type: string
   TaskOutput:
     type: object
     properties:
@@ -2153,6 +2155,8 @@ paths:
               environment:
                 type: string
               limit:
+                type: string
+              git_branch:
                 type: string
       responses:
         201:
