Allow override of Template git branch. Prefer Task override when running Local Job.

--- a/api-docs.yml
+++ b/api-docs.yml
@@ -712,6 +712,8 @@ definitions:
       app:
         type: string
         example: ansible
+      git_branch:
+        type: string
       survey_vars:
         type: array
         items:
@@ -754,6 +756,8 @@ definitions:
       suppress_success_alerts:
         type: boolean
       app:
+        type: string
+      git_branch:
         type: string
   TemplateSurveyVar:
     type: object
