Allow nul git_branch and correctly save to the SQL database.

--- a/api-docs.yml
+++ b/api-docs.yml
@@ -714,6 +714,7 @@ definitions:
         example: ansible
       git_branch:
         type: string
+        example: main
       survey_vars:
         type: array
         items:
@@ -759,6 +760,7 @@ definitions:
         type: string
       git_branch:
         type: string
+        example: main
   TemplateSurveyVar:
     type: object
     properties:
